📇🎓 Checkpoint ./index.html:30726734/643

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Hi there!</h1>
-    
-    <p>
-      I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
-    </p>
+    <div id ="enter">
+       <h1>CLICK TO ENTER</h1>
+    </div>
+    <div id ="tw">
+       <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+       <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+    </div>
+ 
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
