🍐📇 Checkpoint ./home.html:30726734/635 ./index.html:30726734/135

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>  
   <body>
     <div id ="enter">
-       <h1>CLICK TO ENTER</h1>
+      <h2><a href="home.html">CLICK TO ENTER</a></h2>
+     
     </div>
     <div id ="tw">
        <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
