🎓🔖 Checkpoint ./about.html:30726734/63

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     By the end of WWII, many comfort women were executed while those that survived had difficulties reintegrating into society, suffering from physical maladies (including infertility), psychological trauma, poverty, and social stigmas. Thus, many did not speak publicly about their experiences because of the personal and national shame of what happened to them at the hands of Japanese soldiers. Only beginning in the 90s, when this became politicized as an issue of women’s human rights, did details come to light; victims finally broke decades of silence and came forward to share their stories of lifelong suffering and realize their rights for justice. 
     <br>
     <br>
-    Yet, attempts to compensate the victims so far have only been an offense—one-sided deals between leaders that excluded the victims' voices, unofficial funds pledged through private establishments (which have dissolved in the midst of rising diplomatic tensions)... With the generation of comfort women slowly dying out, the urgency for restitution becomes a critical concern in international discourses. 
+    Yet, attempts to compensate the victims so far have only been an offense—rushed one-sided deals between national leaders that excluded the victims' voices, unofficial sympathy charities pledged through private establishments (which have dissolved in the midst of rising diplomatic tensions)... With the generation of comfort women slowly dying out, the urgency for restitution becomes a critical concern in international discourses. 
     </p>
   </div>
   
