--- a/mission.html
+++ b/mission.html
@@ -6,6 +6,13 @@
   <h3>Mission Statement</h3>
 </head>
 <body>
+  <p>
+  Evidently, the comfort women issue remains unresolved as Japan continuously neglects its liabilities and the victims remain critical of these so-called “settlements.” But the failures at proper reparation are concerning because these women have an unquestionable right to an apology—which are unfortunately being disregarded. In my aims to reinforce that right, I've created this website to encourage people not to shy away from a painful history. Discussion needs to be facilitated through education, as well as the sharing of stories, archives and resources. 
+  <br>
+  <br>
+    
+
+  </p>
     
 </body>
 </html>
