--- a/mission.html
+++ b/mission.html
@@ -10,9 +10,16 @@
   Evidently, the comfort women issue remains unresolved as Japan continuously neglects its liabilities and the victims remain critical of these so-called “settlements.” But the failures at proper reparation are concerning because these women have an unquestionable right to an apology—which are unfortunately being disregarded. In my aims to reinforce that right, I've created this website to encourage people not to shy away from a painful history. Discussion needs to be facilitated through education, as well as the sharing of stories, archives and resources. 
   <br>
   <br>
-    
-
+  But more importantly, I intend for this contribution to
+    <ul>
+      <i><li>Function as a significant platform to restore ex-comfort women’s voices and unveil their truths</li></i>
+      <i><li>Propel their marginalized narratives to the forefront of international discourse</li></i>
+      <i><li>Help shift the paradigms for representing ex-comfort women as willful prostitutes to victimized sex slaves</li></i>
+      <i><li>Get people to care</li></i>
+    </ul>
+  With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
   </p>
-    
+  
+  <h3><a href="archives.html">BROWSE ARCHIVES</a></h3>
 </body>
 </html>
