🍀🐈 Checkpoint ./memorials.html:30726734/34 ./involved.html:30726734/87 ./index.html:30726734/92

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id ="enter">
       <h2><a href="home.html">CLICK TO ENTER</a></h2>
-     
+     <!-- asy portal style-->
     </div>
     <div id ="tw">
        <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
