--- a/involved.html
+++ b/involved.html
@@ -5,6 +5,9 @@
     <title>Get Involved</title>
 </head>
 <body>
-    
+  <h2>DONATE</h2>
+  <h2>PETITION</h2>
+  <h2>RESOURCES</h2>
+  
 </body>
 </html>
