😅🎷 Checkpoint ./involved.html:30726734/304 ./archives.html:30726734/115

--- a/archives.html
+++ b/archives.html
@@ -9,6 +9,7 @@
   
   
   <h3>Explore more archives...</h3>
-  <!-- <a href=> </a> -->
+  <a href="https://www.awf.or.jp/index.html">COMFORT WOMEN DIGITAL MUSEUM</a>
+  <a href=> </a>
 </body>
 </html>
