--- a/involved.html
+++ b/involved.html
@@ -5,9 +5,11 @@
     <title>Get Involved</title>
 </head>
 <body>
-  <h2>DONATE</h2>
-  <h2>PETITION</h2>
-  <h2>RESOURCES</h2>
+  
+  <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
+  <h2><a href= "https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
+  <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
+
   
 </body>
 </html>
