🏋🌂 Checkpoint ./archives.html:30726734/313 ./involved.html:30726734/132

--- a/archives.html
+++ b/archives.html
@@ -10,6 +10,8 @@
   
   <h3>Explore more archives...</h3>
   <a href="https://www.awf.or.jp/index.html">COMFORT WOMEN DIGITAL MUSEUM</a>
-  <a href=> </a>
+  <a href="https://www.e-ir.info/tag/comfort-women/">E-IR NEWS ARCHIVE</a>
+  <a href="https://hyperallergic.com/tag/comfort-women/">HYPERALLERGIC ARTICLES</a>
+  <a href="https://www.youtube.com/watch?v=GRmhsulHpLE "><i>SORROWFUL HOMECOMING DOCUMENTARY</i></a>
 </body>
 </html>
