--- a/archives.html
+++ b/archives.html
@@ -5,13 +5,26 @@
     <title>Archives</title>
 </head>
 <body>
-  <h3>Testimonies</h3>
+  <div id="profiles">
+    <h3>Testimonies</h3>
+    <h4></h4>
+  </div>
   
   
-  <h3>Explore more archives...</h3>
-  <a href="https://www.awf.or.jp/index.html">COMFORT WOMEN DIGITAL MUSEUM</a>
-  <a href="https://www.e-ir.info/tag/comfort-women/">E-IR NEWS ARCHIVE</a>
-  <a href="https://hyperallergic.com/tag/comfort-women/">HYPERALLERGIC ARTICLES</a>
-  <a href="https://www.youtube.com/watch?v=GRmhsulHpLE "><i>SORROWFUL HOMECOMING DOCUMENTARY</i></a>
+  <div id="archives">
+      <h3>Explore more archives...</h3>
+  <a href="https://www.awf.or.jp/index.html">Comfort Women Digital Archive Museum</a>
+    <br>
+  <a href="https://www.e-ir.info/tag/comfort-women/">E-IR News Archive</a>
+    <br>
+  <a href="https://hyperallergic.com/tag/comfort-women/">Hyperallergic Articles</a>
+    <br>
+  <a href="https://www.youtube.com/watch?v=GRmhsulHpLE "><i>Sorrowful Homecoming </i>Documentary</a>
+    <br>
+  <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E"><i>My Wish </i>Documentary</a>
+  </div>
+  
+  <h3><a href="memorials.html">MEMORIALS</a></h3>
+
 </body>
 </html>
