--- a/involved.html
+++ b/involved.html
@@ -9,7 +9,7 @@
   <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
   <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
   <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
-  <h2><a href="https://comfort-women.org">WASHINGTON COALITION FOR COMFORT WOMEN ISSUES</a></h2>
+  <h2><a href="https://comfort-women.org">EXPLORE</a></h2>
 
   
 </body>
