🎥👨 Checkpoint ./archives.html:30726734/957 ./involved.html:30726734/86

--- a/archives.html
+++ b/archives.html
@@ -7,12 +7,22 @@
 <body>
   <div id="profiles">
     <h3>Testimonies</h3>
-    <h4></h4>
+    <p><a href="https://www.youtube.com/watch?v=q9GBaAtCewk">Lee Yong-Su</a>
+      <br>
+    (1928~), South Korea</p>
+
+    <p><a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en">Kim Bok-Dong</a>
+      <br>
+    (1926~2019), South Korea</p>
+    
+    <p><a href="https://www.youtube.com/watch?v=j7FXmsLBqNI">Estelita Dy</a>
+      <br>
+      (1929/1930~), The Philippines</p>
   </div>
   
   
   <div id="archives">
-      <h3>Explore more archives...</h3>
+      <h3>Explore more archival content...</h3>
   <a href="https://www.awf.or.jp/index.html">Comfort Women Digital Archive Museum</a>
     <br>
   <a href="https://www.e-ir.info/tag/comfort-women/">E-IR News Archive</a>
