--- a/involved.html
+++ b/involved.html
@@ -10,6 +10,9 @@
   <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
   <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
   <h2><a href="https://comfort-women.org">EXPLORE</a></h2>
+  
+  
+  <h4><a href="home.html">HOME</a></h4>
 
   
 </body>
