--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Hello!</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>  
-  <body>
+  <body id="index">
     <div id ="enter">
       <h2><a href="home.html">CLICK TO ENTER</a></h2>
      <!-- asy portal style-->
