--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>  
   <body id="index">
     <div id ="enter">
-      <h2><a href="home.html">CLICK TO ENTER</a></h2>
+      <h2><a href="home.html">CLICK TO<br>ENTER</a></h2>
      <!-- asy portal style-->
     </div>
     <div id ="tw">
