🎹👸 Checkpoint ./style.css:30726734/399 ./index.html:30726734/32

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      <!-- asy portal style-->
     </div>
     <div id ="tw">
-       <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
-       <p>[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+       <p id="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+       <p id="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
     </div>
  
 
