--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script> 
+    <script src="click.js" defer></script>
   </head>  
   <body id="index">
     <div id ="enter">
