🚥🌱 Checkpoint ./home.html:30726734/10 ./style.css:30726734/353 ./.glitch-assets:30726734/364

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <script src="/script.js" defer></script>
 </head>
   
-<body>
+<body id="home">
   <div id="homepage">
     <h1> <a href = "about.html">COMFORT</a> WOMEN</h1>
   </div>
