🐩🚜 Checkpoint ./style.css:30726734/659 ./home.html:30726734/46

--- a/home.html
+++ b/home.html
@@ -12,9 +12,8 @@
 </head>
   
 <body id="home">
-  <div id="homepage">
-    <h1> <a href = "about.html">COMFORT</a> WOMEN</h1>
-  </div>
+    <h1 id="homepage"> <a href = "about.html">COMFORT</a> WOMEN</h1>
+
     
 </body>
 </html>
