🎈🍲 Checkpoint ./style.css:30726734/209 ./home.html:30726734/174

--- a/home.html
+++ b/home.html
@@ -12,7 +12,10 @@
 </head>
   
 <body id="home">
-    <h1 id="homepage"> <a href = "about.html">COMFORT</a> WOMEN</h1>
+  <div id="homepage">
+    <h1> <a href = "about.html">COMFORT</a> WOMEN</h1>
+  </div>
+    
 
     
 </body>
