🌒🐚 Checkpoint ./style.css:30726734/1162 ./home.html:30726734/61 ./index.html:30726734/4 ./about.html:30726734/25 ./mission.html:30726734/2613 ./memorials.html:30726734/105

--- a/mission.html
+++ b/mission.html
@@ -6,6 +6,7 @@
   <h3>Mission Statement</h3>
 </head>
 <body>
+  <div class="text">
   <p>
   Evidently, the comfort women issue remains unresolved as Japan continuously neglects its liabilities and the victims remain critical of these so-called “settlements.” But the failures at proper reparation are concerning because these women have an unquestionable right to an apology—which are unfortunately being disregarded. In my aims to reinforce that right, I've created this website to encourage people not to shy away from a painful history. Discussion needs to be facilitated through education, as well as the sharing of stories, archives and resources. 
   <br>
@@ -19,6 +20,8 @@
     </ul>
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
   </p>
+  </div>
+
   
   <h3><a href="archives.html">BROWSE ARCHIVES</a></h3>
 </body>
