--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <h3>A history not to be forgotten...</h3>
 </head>
 <body>
-  <div class="history">
+  <div class="text">
     <p>
     Despite 80 years passing since their surrender in World War II, the Japanese government has never issued a formal apology statement nor made the proper reparations for its most notable war victims—colonized sex slaves whose brutal realities are euphemized with the term “comfort women.” These women were involuntarily drafted from colonial territories to provide sex services to Japanese soldiers on the battlefield. Despite being regarded as colonial property, social outcasts, and compelled into labor they could not escape, their plight remains severely unresolved in terms of working towards proper reparation; the status of comfort women as victims of sexual slavery is continually disputed by the current Japanese government. And since many key records were destroyed in an attempt to erase their wartime atrocities (which has made estimating the total number of comfort women difficult), much information surrounding the comfort women system remained obscure to the rest of the world.
     <br>
