📍💎 Checkpoint ./home.html:30726734/291 ./mission.html:30726734/48 ./archives.html:30726734/48 ./memorials.html:30726734/74 ./involved.html:30726734/57 ./.glitch-assets:30726734/86 ./style.css:30726734/799

--- a/mission.html
+++ b/mission.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mission</title>
+    <link rel="stylesheet" href="style.css">
+  
   <h3>Mission Statement</h3>
 </head>
 <body>
