--- a/archives.html
+++ b/archives.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Archives</title>
+    <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   <div id="profiles">
