--- a/involved.html
+++ b/involved.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Get Involved</title>
+    <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
   
@@ -12,7 +14,7 @@
   <h2><a href="https://comfort-women.org">EXPLORE</a></h2>
   
   
-  <h4><a href="home.html">HOME</a></h4>
+  <h4><a href="index.html">HOME</a></h4>
 
   
 </body>
