--- a/memorials.html
+++ b/memorials.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Memorials</title>
+    <link rel="stylesheet" href="style.css">
+  
   <h2>Bronze Girl</h2>
-  <div class ="text">
+  <div class ="bronzegirl">
     <p>All around the world, there are several memorials dedicated to the ex-comfort women’s plight. But it is the iconic “Statue of Peace,” also known as Sonyeo Sang (Statue of a Girl), that is primarily seen at these sites. Designed by husband-and-wife sculptor duo Kim Seo-Kyung and Kim Un-Sung, the statue was first installed in front of the Japanese embassy in Seoul. However, they are constantly under the threat of removal by local Japanese consulates and conservatives halfway across the world, who cite its controversy on the government’s global reputation. And while the design simply depicts a sitting young girl, it’s message to Japan is clear and strong. With clenched fists and an empty seat, this imagery suggests that Japan’s “official apology” did little to acknowledge the victims and its war crimes. For the Japanese government, the bronze girl is a forthright provocation. But for the hundreds and thousands of women who never received proper reparations for their lifelong sufferings, she’s an immovable symbol for solidarity, denunciation, and defiance. </p>
 <img src ="http://www.pacificatrocities.org/uploads/1/2/2/9/12298219/c4ube6twcaawyn0_orig.jpg">
   </div>
