😜🐬 Checkpoint ./style.css:30726734/1098 ./index.html:30726734/58 ./about.html:30726734/85

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script> 
     <script src="click.js" defer></script>
   </head>  
-  <body id="index">
+  <body class="index">
     <div id="enter">
       <h1><a href="home.html">CLICK TO<br>ENTER</a></h1>
      <!-- asy portal style-->
     </div>
-    <div id ="tw">
-       <p id="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
-       <p id="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+    <div class ="tw">
+       <p class="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+       <p class="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
     </div>
  
 
