--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
     <span>
     Despite 80 years passing since their surrender in World War II, the Japanese government has never issued a formal apology statement nor made the proper reparations for its most notable war victims—colonized sex slaves whose brutal realities are euphemized with the term “comfort women.” These women were involuntarily drafted from colonial territories to provide sex services to Japanese soldiers on the battlefield. Despite being regarded as colonial property, social outcasts, and compelled into labor they could not escape, their plight remains severely unresolved in terms of working towards proper reparation; the status of comfort women as victims of sexual slavery is continually disputed by the current Japanese government. And since many key records were destroyed in an attempt to erase their wartime atrocities (which has made estimating the total number of comfort women difficult), much information surrounding the comfort women system remained obscure to the rest of the world.
     <br>
+      <img src="<img src="assets/img/1.jpg" id="image-1" />" id="image-1" />
+
+
     <br>
     By the end of WWII, many comfort women were executed while those that survived had difficulties reintegrating into society, suffering from physical maladies (including infertility), psychological trauma, poverty, and social stigmas. Thus, many did not speak publicly about their experiences because of the personal and national shame of what happened to them at the hands of Japanese soldiers. Only beginning in the 90s, when this became politicized as an issue of women’s human rights, did details come to light; victims finally broke decades of silence and came forward to share their stories of lifelong suffering and realize their rights for justice. 
     <br>
