--- a/memorials.html
+++ b/memorials.html
@@ -20,6 +20,8 @@
 <body>
     
   
-  <h3><a href="involved.html">GET INVOLVED</a></h3>
+    <div class="arrow">
+      <a href="involved.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"/></a>
+  </div>
 </body>
 </html>
