--- a/involved.html
+++ b/involved.html
@@ -14,7 +14,7 @@
   <h2><a href="https://comfort-women.org">EXPLORE</a></h2>
   
   
-  <h4><a href="index.html">HOME</a></h4>
+  <h4><a href="index.html">EXPLORE AGAIN</a></h4>
 
   
 </body>
