🎾🐯 Checkpoint ./style.css:30726734/141 ./home.html:30726734/76 ./about.html:30726734/49

--- a/home.html
+++ b/home.html
@@ -11,9 +11,7 @@
 </head>
   
 <body class="home">
-  <div class="homepage">
-    <h1> <a href = "about.html">COMFORT</a> WOMEN</h1>
-  </div>
+    <h1> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
     
 </body>
 </html>
