--- a/about.html
+++ b/about.html
@@ -25,8 +25,9 @@
     <br>
     <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage1.jpeg?v=1618895439249" class="aimages" />
   </div>
-    
-  <a href="mission.html" class="arrow"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"/></a>
+    <div class="arrow">
+        <a href="mission.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+  </div>
     
 </body>
 </html>
