--- a/memorials.html
+++ b/memorials.html
@@ -18,10 +18,8 @@
  
 </head>
 <body>
-    
-  
-    <div class="arrow">
-      <a href="involved.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"/></a>
-  </div>
+
+  <a href="involved.html" class="arrow"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+
 </body>
 </html>
