--- a/mission.html
+++ b/mission.html
@@ -23,9 +23,10 @@
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
   </p>
   </div>
-
-  <div class="arrow">
-      <a href="archives.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"/></a>
+  <div>
+    
   </div>
+  <a href="archives.html" class="arrow"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+
 </body>
 </html>
