--- a/archives.html
+++ b/archives.html
@@ -36,7 +36,10 @@
   <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E"><i>My Wish </i>Documentary</a>
   </div>
   
-  <a href="memorials.html" class="arrow"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+  <div class="arrow">
+      <a href="memorials.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+
+  </div>
   
 
 </body>
