--- a/involved.html
+++ b/involved.html
@@ -11,7 +11,7 @@
   <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
   <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
   <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
-  <h2><a href="https://comfort-women.org">EXPLORE</a></h2>
+  <h2><a href="https://comfort-women.org">LEARN</a></h2>
   
   
   <h4><a href="index.html">EXPLORE AGAIN</a></h4>
