--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
 </head>
   
 <body class="home">
+  <div class="home1">
     <h1> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
+  </div>
     
 </body>
 </html>
