🚎🏦 Checkpoint ./.glitch-assets:30726734/1139 ./archives.html:30726734/460

--- a/archives.html
+++ b/archives.html
@@ -9,10 +9,14 @@
 <body>
   <div id="profiles">
     <h3>Testimonies</h3>
+    <div class="yongsu">
+     <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499">
+     <p><a href="https://www.youtube.com/watch?v=q9GBaAtCewk">Lee Yong-Su</a>
+     <br>
+    (1928~), South Korea</p>   
+    </div>
     
-    <p><a href="https://www.youtube.com/watch?v=q9GBaAtCewk">Lee Yong-Su</a>
-      <br>
-    (1928~), South Korea</p>
+
 
     <p><a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en">Kim Bok-Dong</a>
       <br>
