🗾🍋 Checkpoint ./archives.html:30726734/1460 ./style.css:30726734/62

--- a/archives.html
+++ b/archives.html
@@ -7,25 +7,33 @@
   
 </head>
 <body>
-  <div id="profiles">
-    <h3>Testimonies</h3>
-    <div class="yongsu">
-     <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499">
-     <p><a href="https://www.youtube.com/watch?v=q9GBaAtCewk">Lee Yong-Su</a>
+   <h3>Testimonies</h3>
+  <span id="profiles">
+    <span class="yongsu">
+     <a href="https://www.youtube.com/watch?v=q9GBaAtCewk"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499" width=30%></a>
      <br>
-    (1928~), South Korea</p>   
+      Lee Yong-Su
+     <br>
+    (1928~), South Korea
     </div>
     
-
-
-    <p><a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en">Kim Bok-Dong</a>
+   <div class="bokdong">
+     <a href= "https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbokdong.png?v=1618910247679" width=30%></a>
+     <br>
+     Kim Bok-Dong
       <br>
-    (1926~2019), South Korea</p>
+    (1926~2019), South Korea
+   </div>
     
-    <p><a href="https://www.youtube.com/watch?v=j7FXmsLBqNI">Estelita Dy</a>
+   <div class="estelita">
+     <a href="https://www.youtube.com/watch?v=j7FXmsLBqNI"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Festelita.png?v=1618910235901" width=30%></a>
+     <br> 
+     Estelita Dy
       <br>
-      (1929/1930~), The Philippines</p>
-  </div>
+      (1929/1930~), The Philippines
+    </div>
+   
+  </span>
   
   
   <div id="archives">
