--- a/home.html
+++ b/home.html
@@ -11,9 +11,7 @@
 </head>
   
 <body class="home">
-  <div class="home1">
-    <h1> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
-  </div>
+    <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
     
 </body>
 </html>
