🏖👵 Checkpoint ./.glitch-assets:30726734/398 ./style.css:30726734/583 ./home.html:30726734/231

--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
 </head>
   
 <body class="home">
-    <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
+  <div class="home2">
+        <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
+  </div>
     
 </body>
 </html>
