🎹⛸ Checkpoint ./style.css:30726734/157 ./about.html:30726734/43 ./index.html:30726734/66

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
      <!-- asy portal style-->
     </div>
     <div class ="tw">
-       <p class="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
-       <p class="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</p>
+       <marquee class="tw1" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
+       <marquee class="tw2" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
     </div>
  
 
