🎢🎻 Checkpoint ./style.css:30726734/368 ./index.html:30726734/60 ./home.html:30726734/120

--- a/home.html
+++ b/home.html
@@ -11,8 +11,10 @@
 </head>
   
 <body class="home">
-  <div class="home2">
+  <div class="home2"
+  <span>
         <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
+  </span>
   </div>
     
 </body>
