--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <script src="click.js" defer></script>
   </head>  
   <body class="index">
-    <div id="enter">
-      <h1><a href="home.html">CLICK TO<br>ENTER</a></h1>
+      <h1 class="enter"><a href="home.html">CLICK TO<br>ENTER</a></h1>
      <!-- asy portal style-->
-    </div>
     <div class ="tw">
        <marquee class="tw1" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
        <marquee class="tw2" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
