--- a/home.html
+++ b/home.html
@@ -11,10 +11,9 @@
 </head>
   
 <body class="home">
-  <div class="home2"
-  <span>
-        <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
-  </span>
+  <div class="home2">
+  <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
+
   </div>
     
 </body>
