--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       <h1 class="enter"><a href="home.html">CLICK TO<br>ENTER</a></h1>
      <!-- asy portal style-->
     <div class ="tw">
-       <marquee class="tw1" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
-       <marquee class="tw2" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
+      <marquee class ="trigger" loop="infinite">
+        <div class="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</div>
+        <div class="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</div>
+      </marquee>
+       
     </div>
  
 
