🏈🏛 Checkpoint ./style.css:30726734/292 ./index.html:30726734/1427

--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
       <h1 class="enter"><a href="home.html">CLICK TO<br>ENTER</a></h1>
      <!-- asy portal style-->
     <div class ="tw">
-      <marquee class ="trigger" loop="infinite">
-        <div class="tw1">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</div>
-        <div class="tw2">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</div>
-      </marquee>
-       
+       <marquee onmouseover="this.stop();" onmouseout="this.start();" class="tw1" loop="infinite" >[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
+       <marquee onmouseover="this.stop();" onmouseout="this.start();" class="tw2" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
     </div>
- 
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
