📉🐿 Checkpoint ./archives.html:30726734/98 ./style.css:30726734/16 ./main.js:30726734/16

--- a/archives.html
+++ b/archives.html
@@ -44,19 +44,19 @@
   <div id="archives">
       <h3>Explore more archival content...</h3>
     <div class="sticky">
-       <a href="https://www.awf.or.jp/index.html">Comfort Women Digital Archive Museum</a>
+       <a href="https://www.awf.or.jp/index.html" class="museum">Comfort Women Digital Archive Museum</a>
     </div>
     <div class="sticky">
-       <a href="https://www.e-ir.info/tag/comfort-women/">E-IR News Archive</a>
+       <a href="https://www.e-ir.info/tag/comfort-women/" class="news">E-IR News Archive</a>
     </div>
     <div class="sticky">
-      <a href="https://hyperallergic.com/tag/comfort-women/">Hyperallergic Articles</a>
+      <a href="https://hyperallergic.com/tag/comfort-women/" class="articles">Hyperallergic Articles</a>
     </div>
     <div class="sticky">
-        <a href="https://www.youtube.com/watch?v=GRmhsulHpLE "><i>Sorrowful Homecoming </i>Documentary</a>
+        <a href="https://www.youtube.com/watch?v=GRmhsulHpLE" class="shdoc"><i>Sorrowful Homecoming </i>Documentary</a>
     </div>
     <div class="sticky">
-        <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E"><i>My Wish </i>Documentary</a>
+        <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E" class="wishdoc"><i>My Wish </i>Documentary</a>
     </div>
   </div>
   
