--- a/involved.html
+++ b/involved.html
@@ -5,6 +5,8 @@
     <title>Get Involved</title>
     <link rel="stylesheet" href="style.css">
   
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   
