😹🚘 Checkpoint ./bg.js:30726734/2259 ./involved.html:30726734/27 ./style.css:30726734/347

--- a/involved.html
+++ b/involved.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-  <script src="script.js"></script>
+  <script src="bg.js"></script>
 </head>
-<body>
+<body class="involved">
   
   <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
   <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
