--- a/involved.html
+++ b/involved.html
@@ -10,13 +10,16 @@
 </head>
 <body class="involved">
   
-  <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
-  <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
-  <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
-  <h2><a href="https://comfort-women.org">LEARN</a></h2>
+  <div class="rl">
+    <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
+    <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
+    <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
+    <h2><a href="https://comfort-women.org">LEARN</a></h2>
   
+    <h4><a href="index.html">EXPLORE AGAIN</a></h4>
+  </div>
   
-  <h4><a href="index.html">EXPLORE AGAIN</a></h4>
+ 
 
   
 </body>
