👼🐑 Checkpoint ./index.html:30726734/562 ./style.css:30726734/772

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <script src="click.js" defer></script>
   </head>  
   <body class="index">
+    <div class="pad">
+      
+      <div class="center">
+        <div class="circle"></div>
+        <div class="circle2"></div>
+      </div>
       <h1 class="enter"><a href="home.html">CLICK TO<br>ENTER</a></h1>
-     <!-- asy portal style-->
+    </div>
+      
     <div class ="tw">
        <marquee onmouseover="this.stop();" onmouseout="this.start();" class="tw1" loop="infinite" >[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
        <marquee onmouseover="this.stop();" onmouseout="this.start();" class="tw2" loop="infinite">[TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT] [TW: THIS WEBSITE DISCUSSES TRAUMA AND SEXUAL ASSAULT]</marquee>
