🌵😇 Checkpoint ./.glitch-assets:30726734/472 ./mission.html:30726734/673 ./main.js:30726734/391 ./style.css:30726734/476

--- a/mission.html
+++ b/mission.html
@@ -5,6 +5,11 @@
     <title>Mission</title>
     <link rel="stylesheet" href="style.css">
   
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
+  <script src="main.js"></script>
+  
   <h3>Mission Statement</h3>
 </head>
 <body>
@@ -14,7 +19,7 @@
   <br>
   <br>
   But more importantly, I intend for this contribution to
-    <ul>
+    <ul class="goals">
       <i><li>Function as a significant platform to restore ex-comfort women’s voices and unveil their truths</li></i>
       <i><li>Propel their marginalized narratives to the forefront of international discourse</li></i>
       <i><li>Help shift the paradigms for representing ex-comfort women as willful prostitutes to victimized sex slaves</li></i>
@@ -23,8 +28,9 @@
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
   </p>
   </div>
+  <img id="voice" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fkim_bok-dong_funeral-20190202_afp-jiji.jpg?v=1619130129776" width="100%">
   <div class="arrow">
-      <a href="archives.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+      <a href="archives.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/></a>
   </div>
 
 </body>
