💇🏁 Checkpoint ./mission.html:30726734/7 ./style.css:30726734/12 ./main.js:30726734/4

--- a/mission.html
+++ b/mission.html
@@ -28,7 +28,7 @@
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
   </p>
   </div>
-  <img id="voice" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fkim_bok-dong_funeral-20190202_afp-jiji.jpg?v=1619130129776">
+  <img class="voice" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fkim_bok-dong_funeral-20190202_afp-jiji.jpg?v=1619130129776">
   <div class="arrow">
       <a href="archives.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/></a>
   </div>
