--- a/archives.html
+++ b/archives.html
@@ -5,10 +5,13 @@
     <title>Archives</title>
     <link rel="stylesheet" href="style.css">
   
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script> 
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   
+  
   <script src="main.js"></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
   <script src="script.js"></script>
   
 </head>
