--- a/archives.html
+++ b/archives.html
@@ -23,7 +23,7 @@
      <br>
       LEE YONG-SU
      <br>
-    (1928~), South Korea
+    (1928~), <br>South Korea
     </div>
     
    <div class="bokdong">
@@ -31,7 +31,7 @@
      <br>
      KIM BOK-DONG
       <br>
-    (1926~2019), South Korea
+    (1926~2019), <br>South Korea
    </div>
     
    <div class="estelita">
@@ -39,7 +39,7 @@
      <br> 
      ESTELITA DY
       <br>
-      (1929/1930~), The Philippines
+      (1929/1930~), <br>The Philippines
     </div>
    
   </div>
@@ -63,11 +63,13 @@
         <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E" class="wishdoc"><i>My Wish </i>Documentary</a>
     </div>
   </div>
-  
-  <div class="arrow">
-      <a href="memorials.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+  <div class="marrow">
+      <div class="arrow">
+      <a href="memorials.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/> </a>
+  </div>
 
   </div>
+
   
 
 </body>
