🖇🙏 Checkpoint ./style.css:30726734/68 ./archives.html:30726734/604

--- a/archives.html
+++ b/archives.html
@@ -62,12 +62,14 @@
     <div class="sticky">
       <div class="shdoc">
           <a href="https://www.youtube.com/watch?v=GRmhsulHpLE" class="link"><i>Sorrowful Homecoming </i>Documentary</a>
+          <iframe width="80%" src="https://www.youtube.com/embed/GRmhsulHpLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
     
     <div class="sticky">
       <div class="wishdoc">
           <a href="https://www.youtube.com/watch?v=BAKT6lZPT4E" class="link"><i>My Wish </i>Documentary</a>
+          <iframe width="80%" src="https://www.youtube.com/embed/BAKT6lZPT4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
     
