--- a/archives.html
+++ b/archives.html
@@ -19,19 +19,19 @@
    <h3>Testimonies</h3>
   <div id="profiles">
     <div class="yongsu">
-     <a href="https://www.youtube.com/watch?v=q9GBaAtCewk"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499" width="80%"></a>
+     <a href="https://www.youtube.com/watch?v=q9GBaAtCewk" class="pic"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499" width="80%"></a>
      <br>
       LEE YONG-SU<br>(1928~),<br>South Korea
     </div>
     
    <div class="bokdong">
-     <a href= "https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbokdong.png?v=1618910247679" width="80%"></a>
+     <a href= "https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en" class="pic"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbokdong.png?v=1618910247679" width="80%"></a>
      <br>
      KIM BOK-DONG<br>(1926~2019),<br>South Korea
    </div>
     
    <div class="estelita">
-     <a href="https://www.youtube.com/watch?v=j7FXmsLBqNI"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Festelita.png?v=1618910235901" width="80%"></a>
+     <a href="https://www.youtube.com/watch?v=j7FXmsLBqNI" class="pic"><img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Festelita.png?v=1618910235901" width="80%"></a>
      <br> 
      ESTELITA DY<br>(1929/1930~),<br>The Philippines
     </div>
