🚋👁 Checkpoint ./.glitch-assets:30726734/814 ./style.css:30726734/910 ./about.html:30726734/3 ./mission.html:30726734/18 ./archives.html:30726734/16 ./memorials.html:30726734/18 ./involved.html:30726734/16

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="cursor" lang="en">
+<html class="bcursor" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>About</title>
