--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <h3>A history not to be forgotten...</h3>
 </head>
 <body class="about">
+  <div
   <div class="text1">
     Despite 80 years passing since their surrender in World War II, the Japanese government has never issued a formal apology statement nor made the proper reparations for its most notable war victims—colonized sex slaves whose brutal realities are euphemized with the term “comfort women.” These women were involuntarily drafted from colonial territories to provide sex services to Japanese soldiers on the battlefield. Despite being regarded as colonial property, social outcasts, and compelled into labor they could not escape, their plight remains severely unresolved in terms of working towards proper reparation; the status of comfort women as victims of sexual slavery is continually disputed by the current Japanese government. And since many key records were destroyed in an attempt to erase their wartime atrocities (which has made estimating the total number of comfort women difficult), much information surrounding the comfort women system remained obscure to the rest of the world.
   </div>
@@ -20,17 +21,23 @@
   <div class="text1">
     Yet, attempts to compensate the victims so far have only been an offense—rushed one-sided deals between national leaders that excluded the victims' voices, unofficial sympathy charities pledged through private establishments (which have dissolved in the midst of rising diplomatic tensions)... With the generation of comfort women slowly dying out, the urgency for restitution becomes a critical concern in international discourses. 
   </div>
-      <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage2.jpeg?v=1618895451966" class="aimages" />
-    <br>
-    <br>
-    <br>
+  
+  <div class= "img1">
+      <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage3.jpg?v=1618895448509" class="aimages"/>
+  </div>
+  <div class="img1">
+        <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage2.jpeg?v=1618895451966" class="aimages" />
+  </div>
+  <div class="img1">
     <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage1.jpeg?v=1618895439249" class="aimages" />
   </div>
+  
+
     <div class="arrow">
         <a href="mission.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/> </a>
   </div>
   
-        <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage3.jpg?v=1618895448509" class="aimages"/>
+
 
 
     
