--- a/involved.html
+++ b/involved.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" class="bcursor">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Get Involved</title>
-    <link rel="stylesheet" href="style.css">
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-  <script src="bg.js"></script>
-</head>
-<body class="involved">
-  
-  <div class="rl">
-    <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
-    <h2><a href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women">PETITION</a></h2>
-    <h2><a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a></h2>
-    <h2><a href="https://comfort-women.org">LEARN</a></h2>
-  
-    <h4><a href="index.html">EXPLORE AGAIN</a></h4>
-  </div>
-  
- 
+    <link rel="stylesheet" href="style.css" />
 
-  
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <script src="bg.js"></script>
+  </head>
+  <body class="involved">
+    <div class="rl">
+      <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
+      <h2>
+        <a
+          href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women"
+          >PETITION</a
+        >
+      </h2>
+      <h2>
+        <a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a>
+      </h2>
+      <h2><a href="https://comfort-women.org">LEARN</a></h2>
+
+      <h4><a href="index.html">EXPLORE AGAIN</a></h4>
+    </div>
+  </body>
 </html>
