--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="main.js"></script>
-  <h3>A history not to be forgotten...</h3>
+  <h3 id="hist">A history not to be forgotten...</h3>
 </head>
 <body class="about">
   <div class="txt">
