🎡🏫 Checkpoint ./memorials.html:30726734/7705

--- a/memorials.html
+++ b/memorials.html
@@ -5,6 +5,13 @@
     <title>Memorials</title>
     <link rel="stylesheet" href="style.css">
   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
+  <script src="main.js"></script>
+</head>
+  
+<body>
   <h3>Bronze Girl</h3>
   <div class ="bronzegirl">
     <p>All around the world, there are several memorials dedicated to the ex-comfort women’s plight. But it is the iconic “Statue of Peace,” also known as Sonyeo Sang (Statue of a Girl), that is primarily seen at these sites. Designed by husband-and-wife sculptor duo Kim Seo-Kyung and Kim Un-Sung, the statue was first installed in front of the Japanese embassy in Seoul. However, the collection is constantly under the threat of removal by local Japanese consulates and conservatives halfway across the world, who cite its controversy on the government’s global reputation. And while the design simply depicts a sitting young girl, it’s message to Japan is clear and strong. With clenched fists and an empty seat, this imagery suggests that Japan’s “official apology” did little to acknowledge the victims and its war crimes. For the Japanese government, the bronze girl is a forthright provocation. But for the hundreds and thousands of women who never received proper reparations for their lifelong sufferings, she’s an immovable symbol for solidarity, denunciation, and defiance. </p>
@@ -13,14 +20,44 @@
 
   <div id="visit">
     <h3>Visit</h3> 
+    <section class="container">
+    <button id="showhide">Toggle All</button>
+    <div class="item">
+      <div class="heading">
+        <h2>Heading</h2>
+        <h3>Subheading</h3>
+      </div>
+      <div class="details">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="heading">
+        <h2>Heading</h2>
+        <h3>Subheading</h3>
+      </div>
+      <div class="details">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
+    <div class="item">
+      <div class="heading">
+        <h2>Heading</h2>
+        <h3>Subheading</h3>
+      </div>
+      <div class="details">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
+  </section>
   </div>
   
- 
-</head>
-<body>
-
+  
   <div class="arrow">
-      <a href="involved.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width=20%/></a>
+      <a href="involved.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/></a>
   </div>
 
 </body>
