🏝🎪 Checkpoint ./memorials.html:30726734/16

--- a/memorials.html
+++ b/memorials.html
@@ -19,7 +19,7 @@
   </div>
 
   <div id="visit">
-    <h3>Visit</h3> 
+    <h3>Locations</h3> 
     <section class="container">
     <button id="showhide">Toggle All</button>
     <div class="item">
